<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/appback"
    android:layoutDirection = "ltr"
    tools:context=".Activities.ActivitySetting">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:onClick="showTempDialog"
        >
     <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Temp_unit"
    android:textSize="20dp"
    android:layout_weight="3"
         android:textColor="@color/text"/>
    <TextView
        android:id="@+id/unit_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c_f"
        android:layout_weight="3"
        android:textSize="20dp"
        android:layout_marginLeft="140dp"
        android:textColor="@color/text"
        />
    </LinearLayout>
    <View
        android:id="@+id/firstLn"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_below="@+id/firstLn"
        android:id="@+id/ln2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:onClick="showLangDialog">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang"
            android:textSize="20dp"
            android:layout_weight="3"
            android:textColor="@color/text"/>
        <TextView
            android:id="@+id/A_E"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ar_En"
            android:layout_weight="3"
            android:textSize="20dp"
            android:layout_marginLeft="200dp"
            android:textColor="@color/text"
            />
    </LinearLayout>
    <View
        android:id="@+id/secdtLn"
        android:layout_below="@id/ln2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/darker_gray"/>

</RelativeLayout>