<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/appback"
    tools:context=".Activities.ActivityMain">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/rv">
        <Button
            android:id="@+id/main_screen_top_toolbar_cities"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:clickable="true"
            android:onClick="clickCity"
            android:layout_alignParentLeft="true"
            android:background="@drawable/ic_domain_black_24dp"
            />
    <TextView
        android:id="@+id/currentCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_name"
        android:textSize="@dimen/city_name_text"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text"

        />
        <Button
            android:id="@+id/main_screen_top_toolbar_settings"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:onClick="clickSet"
            android:clickable="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_settings_black_24dp"
            />
</RelativeLayout>
    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dots_height"
        android:gravity="center"
        android:layout_below="@+id/rv"
        android:orientation="horizontal"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutDots">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/temp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_text"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/temp"
            android:textColor="@color/text"
            />
            <TextView
                android:id="@+id/mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode"
                android:layout_below="@id/temp_text"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/mode"
                android:textColor="@color/text"
                />
            <TextView
                android:id="@+id/max_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_min"
                android:layout_below="@id/mode"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/max_min"
                android:textColor="@color/text"
                />
            <TextView
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updated_text"
                android:layout_below="@id/max_min"
                android:textSize="10dp"
                android:textColor="@color/text"
                />
            <View
                android:id="@+id/firstLn"
                android:layout_below="@id/max_min"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:background="@android:color/darker_gray"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvItemH"
                android:scrollbars="horizontal"
                android:layout_below="@id/firstLn"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvItemV"
                android:scrollbars="vertical"
                android:layout_below="@id/rvItemH"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>
